# docScanner

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md  SECURE_CODING.md  STRUCTURE.md  USAGE.md  _build_test.bat  add_root_cert.ps1  build.bat  build_log.txt  build_ui.bat  build_ui.ps1  check_sig.ps1  check_stores.ps1  claude.md  create_test_images.py  do_commit.ps1  do_commit10.ps1  do_commit11.ps1  do_commit2.ps1  do_commit3.ps1  do_commit4.ps1  do_commit5.ps1  do_commit6.ps1  do_commit7.ps1  do_commit8.ps1  do_commit9.ps1  do_push.ps1  do_push11.ps1  do_push12.ps1  find_sign.bat  git_commit.bat  git_setup.bat  install.bat  pii_scanner.py  push_now.ps1  requirements.txt  (+11 more)
src/: Everything.h  everything_scanner.cpp  everything_scanner.h  main.cpp  main_ui.cpp  pii_detector.cpp  pii_detector.h  reporter.cpp  reporter.h  text_extractor.cpp  text_extractor.h  xlsx_writer.h
